# nlp100

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  sample.json
.github/workflows/: test.yml
nlp100/: chap01.py  chap02.py  chap03.py
tests/: test_chap01.py  test_chap02.py  test_chap03.py
