[tool.poetry]
authors = ["tuampon <diohabara@gmail.com>"]
description = ""
license = "MIT"
name = "nlp100"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pysen = "^0.10.2"
pytest = "^7.2.0"
pytest-watcher = "^0.2.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
line_length = 200
mypy_preset = "strict"
py_version = "py310"
[[tool.pysen.lint.mypy_targets]]
paths = ["."]
